added vars for questions and answers

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
 </head>
-<body background="assets/images/crystal_cave_by_nerkin_d7g3jwa-pre.jpg">
+<body background="assets/images/city_hall.jpg">
 
     <h1>Litrally Parks & Recreation Trivia</h1>
 
