--- a/index.html
+++ b/index.html
@@ -4,16 +4,32 @@
         <meta charset="UTF-8">
         <title>Parks & Recreation Trivia</title>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-
+        <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="assets/javascript/app.js"></script>
 </head>
 <body background="assets/images/city_hall.jpg">
 
-    <h1>Litrally Parks & Recreation Trivia</h1>
+    <h3>Litrally Parks & Recreation Trivia</h3>
+    <div class="wrapper">	
+        <div id= "timeleft"></div>
+      <div id= "questionblock"></div>
+      <div id= "answerblock"></div>
+      <button class ="btn btn-primary" id ="start">Start Game</button><br>
+      <button class="btn btn-info" id="reset">Play Again?</button>
+  </div>
+  </body>
+  </html>
+
 
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/javascript/app.js"></script>
-    </body>
+</body>
 </html>
