went with bootstrap for styling and added in rest of js code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id= "questionblock"></div>
       <div id= "answerblock"></div>
       <button class ="btn btn-primary" id ="start">Start Game</button><br>
-      <button class="btn btn-info" id="reset">Play Again?</button>
+      <button class="btn btn-info" id="reset">Play Again!</button>
   </div>
   </body>
   </html>
